--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,45 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFFFFF"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/img_internship"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="12dp"
-        android:src="@drawable/ic_internship" />
+        android:layout_marginTop="64dp"
+        android:src="@drawable/ic_internship"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
+    <LinearLayout
+        android:id="@+id/tv_edit_email_login"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/img_internship"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
     <EditText
+        android:id="@+id/edit_email_login"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/edittext_background"
-        android:hint="Логин"
+        android:layout_marginVertical="12dp"
+        android:layout_marginHorizontal="16dp"
+        android:background="@drawable/background_edittext_12dp_default"
+        android:backgroundTint="@color/grey"
+        android:hint="Email"
+        android:textColorHint="@color/very_dark_teal_blue"
+        android:textColor="@color/very_dark_teal_blue"
+        android:inputType="textEmailAddress"
+        android:textSize="16dp"
+        android:fontFamily="@font/ss_medium_500"
         android:padding="12dp" />
+    </LinearLayout>
 
-    <EditText
+    <LinearLayout
+        android:id="@+id/tv_edit_password_login"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/edittext_background"
-        android:hint="Пароль"
-        android:inputType="textPassword"
-        android:padding="12dp" />
+        android:layout_height="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_edit_email_login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <EditText
+            android:id="@+id/edit_password_login"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginVertical="12dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/background_edittext_12dp_default"
+            android:backgroundTint="@color/grey"
+            android:hint="Пароль"
+            android:textColorHint="@color/very_dark_teal_blue"
+            android:textColor="@color/very_dark_teal_blue"
+            android:inputType="textPassword"
+            android:textSize="16dp"
+            android:fontFamily="@font/ss_medium_500"
+            android:padding="12dp" />
+    </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:backgroundTint="#009EFF"
-        android:text="Войти"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_edit_password_login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_login"
+            android:layout_width="84dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="153dp"
+            android:layout_marginVertical="12dp"
+            android:text="Войти"
+            android:textAllCaps="false"
+            android:textSize="16dp"
+            android:textColor="@color/white"
+            android:background="@drawable/background_button_24dp_circle"
+            android:backgroundTint="@color/blue"
+            android:fontFamily="@font/ss_bold_700"
+            android:textStyle="normal"/>
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
